# pyqti

./: .gitignore  LICENSE  README.md  demo.py  pyqti.py  setup.cfg
demo/: large.py  small.py
pyqti/: item.py  qti.py  util.py  xmlfile.py
pyqti/templates/: essay.xml  kprim.xml  manifest_essay.xml  structure.xml  structure_section.xml
pyqti/test/: test_item.py
pyqti/test/templates/: kprim.xml  structure_section.xml
qti_templates/: QTI21PackageConfig.xml  imsmanifest.xml  imsmanifest_essay.xml  imsmanifest_kprim.xml  test_structure.xml  test_structure_section.xml  test_structure_section_ref.xml
tests/: test_item.py  test_qti.py  util.py
tests/templates/: essay.xml  imsmanifest.xml  kprim.xml  manifest_essay.xml  manifest_kprim.xml  manifest_section.xml  structure.xml  structure_section_ref.xml
