[metadata]
name = pyqti
version = 0.0.1
description = Library for creating IMS QTI 2.1 assessments
license = BSD 3-Clause License
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Topic :: Education
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
packages = find:
